# ETL-Process-on-Brazil-Comex-Stat-dataset

./: README.md  pyproject.toml
etl_brazil_comex/: etl.ipynb
etl_brazil_comex/pt_br/: etl_pt_br.py
